# fctube

./: docker-compose.yaml  pyproject.toml
core/: admin.py  apps.py  form.py  models.py  services.py
core/migrations/: 0001_initial.py
core/templates/admin/core/: upload_video.html
videos/: settings.py
