[tool.poetry]
name = "videobackend"
version = "0.1.0"
description = ""
authors = ["Felipe Weber <git@felipeweber.dev.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "2.9.9"
pillow = "10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
